Fix: Environment isolation and version number overlap with the menu (Style)

--- a/src/Masa.Stack.Components/wwwroot/css/app.css
+++ b/src/Masa.Stack.Components/wwwroot/css/app.css
@@ -826,3 +826,15 @@ body, .masa-stack-components {
 .masa-stack-components .s-search .m-input__control {
     min-height: 40px;
 }
+
+.masa-stack-components .navigation .navlist {
+    height: calc(100vh - 220px);
+    overflow-y: auto;
+}
+
+.masa-stack-components .navigation .isolation {
+    position: absolute;
+    bottom: 24px;
+    left: 50%;
+    transform: translate(-50%, 0);
+}
